# optymalizacja

./: .gitignore  CMakeLists.txt  Makefile  Makefile.win  README.md  plot_results.py
src/: main.cpp  opt_alg.cpp  user_funs.cpp  user_funs.h
